# grami-ai

./: .bandit  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  digital_marketing_agency_output.txt  docker-compose.yaml  metadata.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_grami.py  setup.py
.github/: FUNDING.yml
.github/workflows/: pypi-publish.yml  security-scan.yml
docs/: agents.md  api_reference.rst  architecture.md  conf.py  getting_started.rst  index.rst  instagram_content_agent.md  installation.rst  quickstart.md  quickstart.rst  requirements.txt  testing.rst  tools_guide.md  websocket_guide.md
examples/: README.md  agent_communication_example.py  agent_crew_example.py  agent_websocket_communication.py  async_agent_advanced_example.py  async_agent_config_example.py  async_agent_custom_method_example.py  async_gemini_example.py  async_gemini_memory_example.py  async_gemini_stream_memory_example.py  basic_agent.py  basic_gemini_agent.py  bot.py  client.py  content_creation_agent.py  custom_tool_example.py  gemini_example.py  growth_manager.py  memory_example.py  requirements.txt  simple_agent_example.py  simple_async_agent.py  social_media_assistant.py  tools.py  tools_agent.py  web_research_agent.py  websocket_agent_communication.py
examples/communication/: README.md  memory_websocket_agent.py  memory_websocket_client.py  multi_request_agent.py  multi_request_client.py  simple_tools_agent.py  simple_tools_client.py  websocket_agent.py  websocket_client.py
examples/gemini/: async_gemini_no_memory_no_streaming.py  async_gemini_redis_memory_streaming.py  async_gemini_stream_memory_example.py  async_gemini_streaming_with_memory.py
examples/llm_providers/: README.md
examples/memory/: README.md  redis_memory_example.py
examples/tools/: README.md
examples/tools_agent/: async_gemini_stream_tools_agent.py  async_gemini_tools_agent.py
grami/: __init__.py
grami/agents/: async_agent.py
grami/memory/: lru.py
grami/providers/: gemini_provider.py
grami_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grami_ai/agents/: BaseAgent.py  async_agent.py
grami_ai/core/: agent.py  config.py  constants.py  exceptions.py  interfaces.py  logging.py
grami_ai/gemini/: api.py
grami_ai/tools/: base.py  (+3 more)
instagram_growth_agency/: .dockerignore  .env.example  Dockerfile.agent_template  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt  test_campaign.py  test_instagram_growth_workflow.py  test_requirements.txt
tests/: conftest.py  test_async_agent.py  test_conversation.py  test_gemini_provider.py
(+49 files in other folders)
