[project]
name = "grami-ai"
version = "0.1.0"
description = "A dynamic and flexible AI agent framework"
authors = [
    {name = "Feras Alawadi", email = "feras@grami.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "typing-extensions>=4.5.0",
    "uuid>=1.30",
    "google-generativeai>=0.3.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "black>=23.3.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"